# reko

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  index.html  planfile.yaml  prefact.yaml  pyproject.toml
examples/: README.md  run_all.py
examples/01-hardcoded-api/: before.py
examples/02-inline-config/: before.py
examples/03-unused-constants/: before.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
src/reko/: __init__.py  __main__.py  config.py  models.py
src/reko/cli/: main.py
src/reko/refactor/: __init__.py  _ast_extract.py  _utils.py  engine.py  extract.py  move.py  remove.py  split.py
src/reko/reporters/: json_reporter.py
src/reko/scanner/: detector.py
src/reko/writers/: __init__.py
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_cli.py  test_detector.py  test_examples_e2e.py  test_refactor.py
tests/fixtures/: sample.py
