[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reko"
version = "0.1.0"
description = "Refaktoryzacja hardkodowanych wartości, struktur i kodu w projektach Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
keywords = [
    "refactoring",
    "hardcoded",
    "magic-numbers",
    "constants",
    "static-analysis",
    "code-quality",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
apply = ["libcst>=1.0"]
dev = [
    "reko[apply]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.scripts]
reko = "reko.cli.main:app"

[project.urls]
Homepage = "https://github.com/semcod/reko"
Repository = "https://github.com/semcod/reko"
Issues = "https://github.com/semcod/reko/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
